# kmat

./: .gitignore  ARCHITECTURE.md  README.md  REFACTOR.md
hpc/: README.md  accession_list.example.txt  run_build.slurm  run_build_master.slurm  run_compress.slurm  run_count.slurm  run_create_stripes.slurm  run_fill.slurm  slurm_build.sh  slurm_count_array.sh  submit_panel.sh
kmat/: CMakeLists.txt  README.md
kmat/benches/: CMakeLists.txt  README.md  bench_main.cpp
kmat/cli/: CMakeLists.txt  main.cpp
kmat/docs/: BENCH.md  BUILD.md  FORMAT.md  README.md
kmat/lib/: CMakeLists.txt
kmat/lib/include/kmat/: build_stream.hpp  count.hpp  error.hpp  fasta.hpp  fastq.hpp  gene.hpp  gwas.hpp  io.hpp  kmer.hpp  log.hpp  matrix.hpp  matrix_layout.hpp  pca.hpp  presence.hpp  runtime.hpp  runtime_inl.hpp  sequence.hpp  stats.hpp  stripe_build.hpp  table.hpp  universe.hpp  validate.hpp
kmat/lib/src/: build_stream.cpp  count.cpp  fasta.cpp  fastq.cpp  gene.cpp  gwas.cpp  io.cpp  kmer.cpp  log.cpp  matrix.cpp  pca.cpp  presence.cpp  runtime.cpp  sequence.cpp  stats.cpp  stripe_build.cpp  table.cpp  universe.cpp  validate.cpp
kmat/testdata/: README.md  accession_list.txt  gene.fasta  phenotypes.tsv  tiny.fasta
kmat/testdata/accessions/: sample_a.fasta  sample_b.fasta  sample_c.fasta  sample_d.fasta  sample_e.fasta  sample_f.fasta
kmat/testdata/panel_k31_n72/: README.md  accession_list.txt  gene.fasta  generate.py  phenotypes.tsv
kmat/tests/: CMakeLists.txt  run_pipeline.sh  run_pipeline_medium.sh  test_build_stream.cpp  test_count.cpp  test_fastq.cpp  test_integration.cpp  test_integration_medium.cpp  test_kmer.cpp  test_matrix.cpp  test_runtime.cpp  test_stats.cpp
singularity/: kmat.def
singularity/patches/: README.md  apply-kmc-system-zlib.sh  binary_reader.h
